# socca-lsp

./: LICENSE  README.md  dune  dune-project  socca-language-server.opam
common/: dune  log.ml  log.mli
dm/: documentManager.ml  documentManager.mli  dune  rawDocument.ml  rawDocument.mli
socca-lsp/: Socca_lsp.ml  dune
toplevel/: config.ml  documentManager.ml  documentManager.mli  dune  lspManager.ml  lspManager.mli  soccatop.ml
